# wazpo

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
configs/: test.yaml
env/: activate.sh  conanfile.txt  deactivate.sh
src/: wazpo.cpp
src/add_ons/: add_posrec.hpp
src/libs/: addOn.C  addOn.h  addon.h  branchHolder.C  branchHolder.h  utils.C  utils.h  wazLooper.C  wazLooper.cpp  wazLooper.h
src/libs/add_ons/: add_posrec.hpp
